	Function becomes recursive.

	* src/nact/nact-clipboard.c (renumber_items):
	Removes recursivity as it is provided by the class.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h (nact_iactions_list_delete_selection):
	No more returns the path to be selected as this can be directly taken
	into account by the function itself.
	Check depth of path before trying gtk_tree_path_up.

	* src/nact/nact-main-menubar.c:
	Reorganize code to avoid the need of delete_selection returning
	a path to be selected.

2009-09-19 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-gconf-provider.c:
	Use na_object_menu_rebuild_items_list() and fix memory leak.

	* src/common/na-iio-provider.c:
	Build the object hierarchy, eventually alphabetically sorted.

	* src/common/na-object.c b:
	Add class name in instance_dipose() trace.

	* src/common/na-obj-action.c (are_equal): Remove trace.

	* src/common/na-obj-menu.c:
	* src/common/na-obj-menu.h:
	Remove traces at instance_dispose() and instance_finalize().
	na_object_menu_rebuild_items_list(): New function.

	* src/common/na-obj-action.c:
	* src/common/na-obj-menu.c:
	* src/common/na-object-item-fn.h:
	* src/common/na-object-item.c:
	na_object_item_set_new_uuid(): Replace function by na_object_set_new_id().

	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h:
	All functions in use for cut/copy/paste functions are renamed as
	primary_xxx.
	nact_clipboard_primary_counts() replaces nact_clipboard_is_empty().

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h:
	nact_iactions_list_get_modified_items(): Replaced by
	nact_iactions_list_has_modified_items().
	nact_iactions_list_has_exportable(): New function.
	nact_iactions_list_is_filling_list(): Removed function.
	toggle_collapse(): Activate shortcuts on menus.
	nact_iactions_list_select_row(): Fix keyboard focus on new items.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-iconditions-tab.c: